--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <div class="brand-icon">
               <i class="fas fa-book-reader"></i>
             </div>
-            <h1 class="brand-name">VerseHaven</h1>
+            <h1 class="brand-name">BookVerse</h1>
           </div>
 
           <nav class="primary-navigation">
@@ -307,45 +307,32 @@
             </div>
 
             <div class="footer-section">
-              <h3>Discover</h3>
+              <h3>Navigation</h3>
               <ul>
-                <li><a href="#">New Releases</a></li>
-                <li><a href="#">Best Sellers</a></li>
-                <li><a href="#">Genres</a></li>
-                <li><a href="#">Authors</a></li>
+                <li><a href="index.html#discovery-view">Discover</a></li>
+                <li><a href="index.html#library-view">My Collection</a></li>
+                <li><a href="index.html#trending-view">Trending</a></li>
+                <li><a href="dashboard.html">Dashboard</a></li>
               </ul>
             </div>
 
             <div class="footer-section">
-              <h3>Library</h3>
+              <h3>Account</h3>
               <ul>
-                <li><a href="#">My Books</a></li>
-                <li><a href="#">Reading Lists</a></li>
-                <li><a href="#">Reviews</a></li>
-                <li><a href="#">Bookmarks</a></li>
-              </ul>
-            </div>
-
-            <div class="footer-section">
-              <h3>Support</h3>
-              <ul>
-                <li><a href="#">Help Center</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
+                <li><a href="login.html">Sign In</a></li>
+                <li>
+                  <a href="#" id="footerSignOut" style="display: none"
+                    >Sign Out</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
 
           <div class="footer-bottom">
             <div class="footer-copyright">
-              © 2024 BookVerse. All rights reserved.
+              © 2024 VerseHaven. All rights reserved.
             </div>
-            <ul class="footer-links">
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Terms</a></li>
-              <li><a href="#">Cookies</a></li>
-            </ul>
           </div>
         </div>
       </footer>
