--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -26,7 +26,7 @@
           <div class="brand-icon">
             <i class="fas fa-book-reader"></i>
           </div>
-          <h1 class="brand-name">VerseHaven</h1>
+          <h1 class="brand-name">BookVerse</h1>
         </div>
         <nav class="primary-navigation">
           <ul class="nav-links">
