--- a/public/login.html
+++ b/public/login.html
@@ -28,7 +28,7 @@
           <div class="brand-icon">
             <i class="fas fa-book-reader"></i>
           </div>
-          <h1 class="brand-name" href="index.html">VerseHaven</h1>
+          <h1 class="brand-name" href="index.html">BookVerse</h1>
         </div>
         <nav class="primary-navigation">
           <ul class="nav-links">
