--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -289,6 +289,13 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="footer-bottom">
+            <div class="footer-copyright">
+              © 2024 BookVerse. All rights reserved.
+            </div>
+          </div>
+    </footer>
 
     <script src="js/firebase.js"></script>
     <script src="js/dashboard.js"></script>
