--- a/public/login.html
+++ b/public/login.html
@@ -123,5 +123,12 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="footer-bottom">
+            <div class="footer-copyright">
+              © 2024 BookVerse. All rights reserved.
+            </div>
+          </div>
+    </footer>
   </body>
 </html>
