--- a/public/index.html
+++ b/public/index.html
@@ -331,7 +331,7 @@
 
           <div class="footer-bottom">
             <div class="footer-copyright">
-              © 2024 VerseHaven. All rights reserved.
+              © 2024 BookVerse. All rights reserved.
             </div>
           </div>
         </div>
