--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -289,12 +289,14 @@
         </div>
       </div>
     </div>
-    <footer>
-      <div class="footer-bottom">
-            <div class="footer-copyright">
-              © 2024 BookVerse. All rights reserved.
-            </div>
+    <footer class="site-footer">
+      <div class="footer-content">
+        <div class="footer-bottom">
+          <div class="footer-copyright">
+            © 2024 BookVerse. All rights reserved.
           </div>
+        </div>
+      </div>
     </footer>
 
     <script src="js/firebase.js"></script>
